--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -1,8 +1,10 @@
 name: IAAS deploy
 
 on:
-  push:
-    branches: [main]
+  # push:
+  #   branches: [main]
+
+  workflow_dispatch:
 
 jobs:
   deploy:
