Update IAAS workflow (#3)

--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -1,8 +1,10 @@
 name: IAAS deploy
 
 on:
-  push:
-    branches: [main]
+  # push:
+  #   branches: [main]
+
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -10,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Copy files vis scp
-        uses: appleboy/scp-action@v0.1.6
+        uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
