--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -38,7 +38,7 @@ jobs:
             npm i
             npm run build
             {
-              echo "API_PORT=$API_PORT"
+              echo "API_PORT=${{ secrets.API_PORT }}"
               echo "MONGO_URI=$MONGO_URI"
               echo "SECRET_OR_KEY=$SECRET_OR_KEY"
             } >> .env
