--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -19,7 +19,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.PORT }}
           source: "."
-          target: "/opt/todoapp"
+          target: "~/todoapp"
 
       - name: Run the app
         uses: appleboy/ssh-action@v0.1.6
@@ -29,7 +29,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            cd /opt/todoapp
+            cd ~/todoapp
             npm i
             npm run build
             {
