--- a/.github/workflows/todoapp.service
+++ b/.github/workflows/todoapp.service
@@ -5,7 +5,7 @@ Description=todoapp
 Type=simple
 Restart=always
 RestartSec=10
-ExecStart=/usr/bin/node ~/todoapp/dist/index.js
+ExecStart=node ~/todoapp/dist/index.js
 WorkingDirectory=~/todoapp/
 
 [Install]
