--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -37,6 +37,6 @@ jobs:
               echo "MONGODB_URI=${{ secrets.MONGODB_URI }}"
               echo "SECRET_OR_KEY=${{ secrets.SECRET_OR_KEY }}"
             } >> .env
-            sudo cp .github/workflows/todoapp.service /etc/systemd/system/todoapp.service
-            sudo systemctl daemon-reload
-            sudo systemctl restart todoapp
+            cp .github/workflows/todoapp.service /home/todoapp/.config/systemd/user/todoapp.service
+            systemctl --user daemon-reload
+            systemctl --user restart todoapp
