--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,18 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=todoappuser
       - MONGO_INITDB_ROOT_PASSWORD=todoappuser
     volumes:
-      - ./init.js:/docker-entrypoint-initdb.d/init.js:ro
+      - ./docker/init.js:/docker-entrypoint-initdb.d/init.js:ro
     ports:
       - '27017-27019:27017-27019'
+
+  server:
+    build:
+      context: ./
+      dockerfile: ./Dockerfile
+    expose:
+      - 5000
+    ports:
+      - 5000:5000
+    command: npm run start
+    depends_on:
+      - database
