--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=todoappuser
       - MONGO_INITDB_ROOT_PASSWORD=todoappuser
     volumes:
-      - ./docker/init.js:/docker-entrypoint-initdb.d/init.js:ro
+      - ./init.js:/docker-entrypoint-initdb.d/init.js:ro
     ports:
       - '27017-27019:27017-27019'
 
