--- a/.github/workflows/caas.yml
+++ b/.github/workflows/caas.yml
@@ -15,7 +15,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.PORT }}
-          source: "docker-compose.yml"
+          source: "docker-compose.yml,init.js"
           target: "~/todoapp"
       - name: Run the app
         uses: appleboy/ssh-action@v0.1.6
