--- a/.github/workflows/caas.yml
+++ b/.github/workflows/caas.yml
@@ -8,6 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DO_CONTAINER_REGISTRY_API_TOKEN }}
+      - name: Log in to DO Container Registry
+        run: doctl registry login --expiry-seconds 600
+      - name: Build image
+        run: docker build -t registry.digitalocean.com/dsd-paas-cr/todoapp-caas:latest -f ./Dockerfile .
+      - name: Push image
+        run: docker push registry.digitalocean.com/dsd-paas-cr/todoapp-caas:latest
       - name: Copy files vis scp
         uses: appleboy/scp-action@v0.1.3
         with:
