--- a/.github/workflows/caas.yml
+++ b/.github/workflows/caas.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Log in to DO Container Registry
         run: doctl registry login --expiry-seconds 600
       - name: Build image
-        run: docker build -t registry.digitalocean.com/dsd-paas-cr/todoapp-caas:latest -f ./Dockerfile .
+        run: docker build -t registry.digitalocean.com/dsd-paas-cr/todoapp:latest -f ./Dockerfile .
       - name: Push image
-        run: docker push registry.digitalocean.com/dsd-paas-cr/todoapp-caas:latest
+        run: docker push registry.digitalocean.com/dsd-paas-cr/todoapp:latest
       - name: Copy files vis scp
         uses: appleboy/scp-action@v0.1.3
         with:
