Move database config to env

--- a/.github/workflows/caas.yml
+++ b/.github/workflows/caas.yml
@@ -41,6 +41,6 @@ jobs:
               echo "MONGODB_URI=${{ secrets.MONGODB_URI }}"
               echo "SECRET_OR_KEY=${{ secrets.SECRET_OR_KEY }}"
             } > .env
-            docker pull registry.digitalocean.com/dsd-paas-cr/todoapp:latest
+            docker compose pull server
             docker compose down
             docker compose up --build -d
