--- a/.github/workflows/caas.yml
+++ b/.github/workflows/caas.yml
@@ -8,6 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DO_CONTAINER_REGISTRY_API_TOKEN }}
+      - name: Log in to DO Container Registry
+        run: doctl registry login --expiry-seconds 600
+      - name: Build image
+        run: docker build -t registry.digitalocean.com/dsd-paas-cr/todoapp:latest -f ./Dockerfile .
+      - name: Push image
+        run: docker push registry.digitalocean.com/dsd-paas-cr/todoapp:latest
       - name: Copy files vis scp
         uses: appleboy/scp-action@v0.1.3
         with:
@@ -15,7 +25,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.PORT }}
-          source: "docker-compose.yml"
+          source: "docker-compose.yml,init.js"
           target: "~/todoapp"
       - name: Run the app
         uses: appleboy/ssh-action@v0.1.6
@@ -30,6 +40,10 @@ jobs:
               echo "API_PORT=${{ secrets.API_PORT }}"
               echo "MONGODB_URI=${{ secrets.MONGODB_URI }}"
               echo "SECRET_OR_KEY=${{ secrets.SECRET_OR_KEY }}"
-            } >> .env
+              echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}"
+              echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}"
+              echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}"
+            } > .env
+            docker compose pull server
             docker compose down
-            docker compose down --build
+            docker compose up --build -d
